<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="record_menu_start">Start</string>
    <string name="record_menu_stop">Stop</string>
    <string name="album_name">SnapMovie</string>
    <string name="app_name">SnapMovie</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="title_activity_shoot_video">ShootVideoActivity</string>
    <string name="title_activity_video_gallery">VideoGalleryActivity</string>
    <string name="title_activity_video_filter">VideoFilterActivity</string>
    <string name="title_activity_add_audio">AddAudioActivity</string>
    <string name="btn_prev">이전</string>
    <string name="btn_next">다음</string>
    <string name="btn_encoding">인코딩</string>
    <string name="title_videoFilter">Video Filter</string>
    <string name="title_videoGallery">Video Gallery</string>
	<string name="title_audio_select">배경음악</string>
	<string name="title_voice_select">음성</string>
</resources>
