<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ac.mju.snapmovie.VideoGalleryActivity" >

    <LinearLayout
        android:id="@+id/videoGalleryLinear"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:background="#fff"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_videoGallery_prev"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_prev"
            android:textSize="6pt" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/title_videoGallery"
            android:textSize="8pt" />

        <Button
            android:id="@+id/btn_videoGallery_next"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_next"
            android:textSize="6pt" />
    </LinearLayout>

    <ListView
        android:id="@+id/filenamelist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/selectVideo"
        android:layout_below="@+id/selectVideo" >
    </ListView>

    <VideoView
        android:id="@+id/selectVideo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignLeft="@+id/videoGalleryLinear"
        android:layout_below="@+id/videoGalleryLinear" />

</RelativeLayout>